--- a/lxgg_frontend/package.json
+++ b/lxgg_frontend/package.json
@@ -19,11 +19,12 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.28.4",
     "vue-loader": "^13.0.0",
-    "vue-template-compiler": "^2.3.4",
+    "vue-template-compiler": "^2.4.2",
     "webpack": "^3.0.0"
   },
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "vue": "^2.3.4"
+    "vue": "^2.4.2",
+    "vue-router": "^2.7.0"
   }
 }
