--- a/lxgg_frontend/package.json
+++ b/lxgg_frontend/package.json
@@ -1,29 +1,24 @@
 {
-  "name": "vuejs_webpack_starter",
+  "name": "lxgg",
   "version": "1.0.0",
-  "description": "VueJS webpack starting point",
+  "description": "LXGG",
   "main": "index.js",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack --watch",
-    "prod": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "webpack --mode development --watch --hide-modules",
+    "prod": "webpack --mode production --progress --hide-modules"
   },
   "author": "Streats",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "cross-env": "^3.0.0",
     "css-loader": "^0.28.4",
-    "vue-loader": "^13.0.0",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0"
-  },
-  "dependencies": {
-    "babel-runtime": "^6.23.0",
+    "vue-loader": "^14.1.1",
+    "vue-template-compiler": "^2.5.13",
+    "webpack": "^4.0.0-beta.1",
+    "schema-utils": "^0.4.5",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "vue": "^2.4.4",
-    "vue-router": "^2.7.0"
+    "vue-router": "^3.0.1",
+    "webpack-cli": "^2.0.6"
   }
 }
